# PrinProg1

./: CMakeLists.txt  Compiler.c  Optimizer.c  compile  optimize  tinyL.out
compile.dSYM/Contents/Resources/DWARF/: compile
optimize.dSYM/Contents/: Info.plist
optimize.dSYM/Contents/Resources/DWARF/: optimize
tests/: .test1.swp  .test4.swp
